Fixed white box when vertical and horizontal scrollbars are visible

--- a/styles/base.less
+++ b/styles/base.less
@@ -38,11 +38,6 @@ atom-pane {
     }
 }
 
-.scrollbar-corner {
-  background-color: fade(@base-background-color,30%);
-
-  div {
-    height: 0 !important;
-    width: 0 !important;
-  }
-}
+::-webkit-scrollbar-corner {
+		background: fade(@base-background-color,30%);
+	}
